Refactor: fixing bug

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <style>
       .table-responsive {
-        max-height: 40vh;
+        max-height: 35vh;
         overflow-y: auto;
       }
 
@@ -28,8 +28,8 @@
     <title>Monitoring Pengeluaran</title>
   </head>
   <body class="bg-light">
-    <div class="container mt-3">
-      <h2 class="text-center mb-4">Monitoring Pengeluaran</h2>
+    <div class="container mt-5">
+      <h2 class="text-center mb-5">Monitoring Pengeluaran</h2>
 
       <div class="row mb-4">
         <div class="col">
@@ -44,7 +44,7 @@
           <div class="card shadow-sm border-0">
             <div class="card-body text-center">
               <p class="card-text">Total User I</p>
-              <p id="total" class="card-title fw-bold">Rp 0.00</p>
+              <p id="totalI" class="card-title fw-bold">Rp 0.00</p>
             </div>
           </div>
         </div>
@@ -196,8 +196,7 @@
     </div>
 
     <footer class="text-center text-lg-start text-white fixed-bottom">
-      <div class="container p-4 pb-0">
-        <section class="mb-2 text-center">
+        <section class="text-center">
           <!-- Instagram -->
           <a class="btn btn-floating m-1" href="#!" role="button"
             ><i class="bi bi-instagram"></i
