refacotr: update status

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="dropdown">
                   <select id="updateExpenseStatus" class="btn border">
                     <option selected="selected" disabled>Pilih Status</option>
-                    <option value="lunas">Lunas</option>
+                    <option value="Lunas">Lunas</option>
                     <option value="Belum Bayar">Belum Bayar</option>
                   </select>
                 </div>
