--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 type="text"
                 class="form-control"
                 id="searchInput"
-                placeholder="Cari nama orang..."
+                placeholder="Cari..."
                 oninput="searchExpenses()"
               />
 
